# pytket-qir

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  _metadata.py  filename.bc  flake.nix  mypy.ini  pyproject.toml  pyqir-0.6.0a1-py3-none-any.whl  pyqir_parser-0.6.0a1-cp36-abi3-macosx_10_7_x86_64.whl  pytest.ini  ruff.toml  setup.py  test_pytket_qir_4.qir  test_pytket_qir_5.qir  test_pytket_qir_6.qir  test_pytket_qir_barrier.qir  test_pytket_qir_barrier_ii.qir  test_pytket_qir_conditional_iii.qir  test_pytket_qir_conditional_v.qir  test_pytket_qir_quantum.qir  test_pytket_qir_quantum_iii.qir
.github/workflows/: all-checks.yml  build-test  build_and_test.yml  build_with_nix.yml  check-examples.yml  docs.yml  issue.yml  lint.yml  release.yml  test.yml  type.yml
docs/: api.rst  changelog.rst  index.rst  install.sh  intro.txt
docs/_static/: custom.css
docs/api/: index.html
example/: ClassicalCircuit-1.ll  Untitled.ipynb  qir-example-generation.ipynb  x-ClassicalCircuit-2.ll
examples/: README.md  qir_introduction.ipynb
examples/python/: qir_introduction.py
nix-support/: README.md  pyqir.nix  pytket-qir.nix
pytket/qir/: __init__.py  _metadata.py  cprofile.txt
pytket_qir/: __init__.py  cfg.py  converter.py  generator.py  module.py  parser.py  qir.py
pytket_qir/gatesets/: base.py
pytket_qir/utils/: __init__.py  utils.py
stubs/pytket_qir/: qir.pyi
tests/: api_2_test.py  api_barrier_test.py  api_conditional_test.py  api_quantum_test.py  api_rangepredicate_test.py  api_test.py  barrier_test.py  cfg_test.py  conditional_test.py  conftest.py  conversion_test.py  convert-pytket-to-qir_test-2.py  convert-pytket-to-qir_test-3.py  convert-pytket-to-qir_test-4.py  convert-pytket-to-qir_test-5.py  convert-pytket-to-qir_test.py  converter_test.py  example_test.py  gateset_test.py  generator_test.py  module_test.py  parser_test.py  pconditional_test.py  pconversion_test.py  pphi_test.py  pwasm_test.py  qasm_test.py  qec.qasm  qir_test.py  quantumgates_test.py  rangepredicate_test.py  rng_test.py  test_pytket_qir.py  utilities.py  validation_test.py  wasm_test.py
tests/qasm/: test0.qasm  test1.qasm
tests/qir/: ptest_pytket_qir.ll  ptest_pytket_qir_10.ll  ptest_pytket_qir_11.ll  ptest_pytket_qir_12.ll  ptest_pytket_qir_13.ll  ptest_pytket_qir_14.ll  ptest_pytket_qir_14_b.ll  (+369 more)
(+175 files in other folders)
