[tool.poetry]
name = "pytket-qir"
version = "0.1.5"
description = "Python module for interfacing QIR with the Quantinuum pytket library."
readme = "README.md"
license = "LICENSE"
repository = "https://github.com/CQCL/pytket-qir"
authors = ["Roland Guichard <roland.guichard@cambridgequantum.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pytket = "^1.8.1"
pyqir = "^0.8.0"
pyqir-parser = "^0.6.2"
pyqir-evaluator = "^0.6.2"
pyqir-generator = "^0.6.2"
pytest = "~7.1"

[tool.poetry.scripts]
compile-bc-test-files = "tests.qir_test_files.compile_bc_test_files:compile_to_bc"
check-test-files = "tests.qir_test_files.check_test_files:check_files"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
